--- a/src/pages/presentacion.astro
+++ b/src/pages/presentacion.astro
@@ -1,4 +1,8 @@
+---
+import Layout from "../layouts/Layout.astro"
+---
 
+<Layout>
 <div class="w-full flex z-28 justify-center pt-28 -mb-4" style="background-image:url('../src/assets/image3_1.jpg'); background-size: cover; height:650px;">
     <div class="columns-1">
         <h1 class="text-6xl font-bold flex flex-row mt-28 pb-4 text-shadow " style="color: rgba(13, 112, 13, 0.884); text-shadow: rgba(27, 27, 27, 0.781) 3px 0 10px;">
@@ -29,6 +33,7 @@
     </div>
 
 </div>
+</Layout>
 <!--
 <div style="background-image:url('../assets/img/barra_colores.jpg'); height:7px;" class="mt-0 w-full -z-2">
 </div>
