--- a/src/components/App.astro
+++ b/src/components/App.astro
@@ -2,9 +2,9 @@
 import Play from '../icons/Play.astro';
 ---
 
-<div style="background-image:url('../src/assets/barra_colores.jpg'); height:6px;" class="mt-28 w-full -z-2">
+<div style="background-image:url('../../public/assets/barra_colores.jpg'); height:6px;" class="mt-28 w-full -z-2">
 </div> 
-<div class="w-full z-28 py-8 -mb-4 grid grid-cols-1 place-content-start" style="background-image:url('../src/assets/nuevofondoapp.png'); background-size: cover; height:650px; background-position-y: center;">
+<div class="w-full z-28 py-8 -mb-4 grid grid-cols-1 place-content-start" style="background-image:url('../../public/assets/nuevofondoapp.png'); background-size: cover; height:650px; background-position-y: center;">
     <div class="">
         <h1 class="ml-24 mt-16 text-6xl font-bold text-shadow" style="color: rgb(243, 245, 243); text-shadow: rgba(27, 27, 27, 0.781) 3px 0 10px;">
             Conocé nuestra <br>
@@ -32,5 +32,5 @@ import Play from '../icons/Play.astro';
     </div>
 
 </div>
-<div style="background-image:url('../src/assets/barra_colores.jpg'); height:6px;" class="mt-4 w-full -z-2">
+<div style="background-image:url('../../public/assets/barra_colores.jpg'); height:6px;" class="mt-4 w-full -z-2">
 </div> 
