--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -4,7 +4,7 @@
         <a href="/">
             <img
                 class="h-10 hover:opacity-80"
-                src="../src/assets/amicos_logo.png"
+                src="../../public/assets/amicos_logo.png"
                 alt="amicos logo"
             />
         </a>
@@ -16,6 +16,6 @@
         </div> 
     </div>
     
-    <div style="background-image:url('../src/assets/barra_colores.jpg'); height:7px;" class="mt-14 w-full -z-2">
+    <div style="background-image:url('../../public/assets/barra_colores.jpg'); height:7px;" class="mt-14 w-full -z-2">
     </div>  
 </header>
