--- a/src/pages/presentacion.astro
+++ b/src/pages/presentacion.astro
@@ -3,7 +3,7 @@ import Layout from "../layouts/Layout.astro"
 ---
 
 <Layout>
-<div class="w-full flex z-28 justify-center pt-28 -mb-4" style="background-image:url('../src/assets/image3_1.jpg'); background-size: cover; height:650px;">
+<div class="w-full flex z-28 justify-center pt-28 -mb-4" style="background-image:url('../../public/assets/image3_1.jpg'); background-size: cover; height:650px;">
     <div class="columns-1">
         <h1 class="text-6xl font-bold flex flex-row mt-28 pb-4 text-shadow " style="color: rgba(13, 112, 13, 0.884); text-shadow: rgba(27, 27, 27, 0.781) 3px 0 10px;">
             Asociación Mutual <br>
