--- a/src/components/HeaderHome.astro
+++ b/src/components/HeaderHome.astro
@@ -5,7 +5,7 @@
     <a href="#">
         <img
             class="h-10 hover:opacity-80"
-            src="../src/assets/amicos_logo.png"
+            src="../../public/assets/amicos_logo.png"
             alt="amicos logo"
         />
     </a>
@@ -29,6 +29,6 @@
     </div> 
 </div>
 
-<div style="background-image:url('../src/assets/barra_colores.jpg'); height:6px;" class="mt-14 w-full -z-2">
+<div style="background-image:url('../../public/assets/barra_colores.jpg'); height:6px;" class="mt-14 w-full -z-2">
 </div> 
 </div>
