--- a/src/pages/cuerpo.astro
+++ b/src/pages/cuerpo.astro
@@ -1,7 +1,7 @@
-<div style="background-image:url('../src/assets/barra_colores.jpg'); height:6px;" class="mt-14 w-full -z-2">
+<div style="background-image:url('../../public/assets/barra_colores.jpg'); height:6px;" class="mt-14 w-full -z-2">
 </div> 
 
-<div class="grid grid-cols-1 place-content-around py-16" style="background-image:url('../src/assets/image2.jpg'); background-size: cover; height:800px;">
+<div class="grid grid-cols-1 place-content-around py-16" style="background-image:url('../../public/assets/image2.jpg'); background-size: cover; height:800px;">
   
     <div class="p-4 mx-24 leading-normal  rounded-2xl shadow-2xl h-full hover:shadow-xl hover:opacity-90" style="backdrop-filter: blur(30px);">
         <h6 class="mb-1 text-4xl font-bold tracking-tight text-green-700 text-pretty" style="text-shadow: rgba(216, 216, 216, 0.781) 3px 0 10px; ">Atención personalizada</h6>
@@ -20,5 +20,5 @@
 
   
 </div>
-<div style="background-image:url('../src/assets/barra_colores.jpg'); height:6px;" class="w-full -z-2">
+<div style="background-image:url('../../public/assets/barra_colores.jpg'); height:6px;" class="w-full -z-2">
 </div> 
