--- a/src/components/HeaderHome.astro
+++ b/src/components/HeaderHome.astro
@@ -1,11 +1,11 @@
 
 <div class="flex justify-start">
-    <div class="flex justify-between items-center py-2 w-full px-24 fixed z-10  bg-gradient-to-b from-green-200 to-transparent" style="backdrop-filter: blur(15px);">
+    <div class="flex justify-between items-center py-2 w-full fixed z-10 bg-gradient-to-b from-green-200 to-transparent px-12 sm:px-12 md:px-12 lg:px-24 xl:px-24 2xl:px-64" style="backdrop-filter: blur(15px);">
     
     <a href="#">
         <img
-            class="h-10 hover:opacity-80"
-            src="../../public/assets/amicos_logo.png"
+            class="h-10 hover:opacity-80 overflow-hidden"
+            src="amicos_logo.png"
             alt="amicos logo"
         />
     </a>
@@ -29,6 +29,6 @@
     </div> 
 </div>
 
-<div style="background-image:url('../../public/assets/barra_colores.jpg'); height:6px;" class="mt-14 w-full -z-2">
+<div style="background-image:url('barra_colores.jpg'); height:6px;" class="mt-14 w-full -z-2">
 </div> 
 </div>
