--- a/src/pages/info.astro
+++ b/src/pages/info.astro
@@ -1,11 +1,11 @@
 
-<div class="grid grid-cols-3 place-content-around py-16" id="info">
+<div class="grid grid-cols-1 place-content-center py-16 sm:grid-cols-2 md:grid-cols-2 lg:grid-cols-3" id="info">
     
     <!-- PRESTADORES -->
     <div style="width: 320px; height: 340px" class="p-4 mx-auto leading-normal">
         <a href="#">
             <div class="group bg-white border border-gray-200 rounded-lg shadow-lg shadow-gray-400/60 hover:opacity-60 hover:shadow-gray-900/80">
-                <img class="rounded-t-lg" src="../../public/assets/planes.jpg" alt="" />
+                <img class="rounded-t-lg" src="/planes.jpg" alt="" />
                 <div class="mt-3 mx-4">
                     <h5 class=" text-2xl font-bold tracking-tighter text-gray-900 ">Prestadores</h5>
                     <p class="mb-2 font-normal text-gray-700 dark:text-gray-400">Contamos con prestaciones en las mejores Instituciones de la Provincia.</p>
@@ -18,7 +18,7 @@
     <div style="width: 320px; height: 340px" class="p-4 mx-auto leading-normal">
         <a href="#">
             <div class="group bg-white border border-gray-200 rounded-lg shadow-lg shadow-gray-400/60 hover:opacity-60 hover:shadow-gray-900/80">
-                <img class="rounded-t-lg" src="../../public/assets/planes.jpg" alt="" />
+                <img class="rounded-t-lg" src="planes.jpg" alt="" />
                 <div class="m-4">
                     <h5 class="mb-2 text-2xl font-bold tracking-tight text-gray-900">Planes</h5>
                     <p class="font-normal text-gray-700 dark:text-gray-400">Nuestros Planes abarcan una amplia cobertura.</p>
@@ -31,7 +31,7 @@
     <div style="width: 320px; height: 340px" class="p-4 mx-auto leading-normal">
         <a href="#">
             <div class="group bg-white border border-gray-200 rounded-lg shadow-lg shadow-gray-400/60 hover:opacity-60 hover:shadow-gray-900/80">
-                <img class="rounded-t-lg" src="../../public/assets/planes.jpg" alt="" />
+                <img class="rounded-t-lg" src="planes.jpg" alt="" />
                 <div class="m-4">
                     <h5 class="mb-2 text-2xl font-bold tracking-tight text-gray-900">Vademécum</h5>
                     <p class="font-normal text-gray-700 dark:text-gray-400">Cobertura en medicamentos.</p>
@@ -45,7 +45,7 @@
     <div style="width: 320px; height: 340px" class="p-4 mx-auto leading-normal">
         <a href="#">
             <div class="group bg-white border border-gray-200 rounded-lg shadow-lg shadow-gray-400/60 hover:opacity-60 hover:shadow-gray-900/80">
-                <img class="rounded-t-lg" src="../../public/assets/planes.jpg" alt="" />
+                <img class="rounded-t-lg" src="planes.jpg" alt="" />
                 <div class="m-4">
                     <h5 class="mb-2 text-2xl font-bold tracking-tight text-gray-900">Delegaciones</h5>
                     <p class=" font-normal text-gray-700 dark:text-gray-400">Estamos en varias localidades del Interior.</p>
@@ -59,7 +59,7 @@
     <div style="width: 320px; height: 340px" class="p-4 mx-auto leading-normal">
         <a href="#">
             <div class="group bg-white border border-gray-200 rounded-lg shadow-lg shadow-gray-400/60 hover:opacity-60 hover:shadow-gray-900/80">
-                <img class="rounded-t-lg" src="../../public/assets/planes.jpg" alt="" />
+                <img class="rounded-t-lg" src="planes.jpg" alt="" />
                 <div class="m-4">
                     <h5 class="mb-2 text-2xl font-bold tracking-tight text-gray-900 ">Prestadores | Asesores</h5>
                     <p class=" font-normal text-gray-700 dark:text-gray-400">Consultá con nuestros Promotores para asesorarte.</p>
@@ -73,7 +73,7 @@
     <div style="width: 320px; height: 340px" class="p-4 mx-auto leading-normal">
         <a href="#">
             <div class="group bg-white border border-gray-200 rounded-lg shadow-lg shadow-gray-400/60 hover:opacity-60 hover:shadow-gray-900/80">
-                <img class="rounded-t-lg " src="../../public/assets/planes.jpg" alt="" />
+                <img class="rounded-t-lg " src="planes.jpg" alt="" />
                 <div class="m-4">
                     <h5 class="mb-2 text-2xl font-bold tracking-tight text-gray-900">Ubicación</h5>
                     <p class="pb-6 font-normal text-gray-700 dark:text-gray-400">Dónde nos ubicamos.</p>
