--- a/src/pages/presentacion.astro
+++ b/src/pages/presentacion.astro
@@ -3,8 +3,8 @@ import Layout from "../layouts/Layout.astro"
 ---
 
 <Layout>
-<div class="w-full flex z-28 justify-center pt-28 -mb-4" style="background-image:url('../../public/assets/image3_1.jpg'); background-size: cover; height:650px;">
-    <div class="columns-1">
+<div class="w-screen grid grid-cols-1 gap-4 z-28 place-content-between  pt-28 -mb-4 sm:grid-cols-1 sm:py-2 lg:pl-24 lg:grid-cols-3" style="background-image:url('image3_1.jpg'); background-size: cover; height:650px;">
+    <div class="col-span-2">
         <h1 class="text-6xl font-bold flex flex-row mt-28 pb-4 text-shadow " style="color: rgba(13, 112, 13, 0.884); text-shadow: rgba(27, 27, 27, 0.781) 3px 0 10px;">
             Asociación Mutual <br>
             Intercooperativa Solidaria.
@@ -15,7 +15,7 @@ import Layout from "../layouts/Layout.astro"
             Provincia de Córdoba.
         </h2>
     </div>
-    <div style="margin-left:90px; margin-top:80px" class="columns-1 flex flex-col">
+    <div style="margin-left:90px; margin-top:80px" class="col-span-1">
         <div style="margin-bottom:40px">
             <a href="/asociarme">
                 <button type="button" class="shadow-lg shadow-gray-800/60 hover:shadow-gray-800/80 text-white bg-gradient-to-br from-blue-400 to-green-600 hover:bg-gradient-to-bl focus:outline-none font-medium rounded-lg text-m  py-2.5 text-center mb-2 w-48 h-14">
