--- a/src/components/App.astro
+++ b/src/components/App.astro
@@ -2,7 +2,7 @@
 import Play from '../icons/Play.astro';
 ---
 
-<div style=" background-image:url('barra_colores.jpg'); height:6px;" class="mt-28 w-full -z-2">
+<div style="background-image:url('barra_colores.jpg'); height:6px;" class="w-full -z-2 mt-32">
 </div> 
 <div class="w-full h-screen z-28 py-8 -mb-4 grid grid-cols-1 place-content-start" style="background-image:url('nuevofondoapp.png'); background-size: cover; height:650px; background-position-y: center;">
     <div class="">
