--- a/src/components/Atencion.astro
+++ b/src/components/Atencion.astro
@@ -1,6 +1,11 @@
 
-<div id="atencion" class="w-full flex justify-center pt-28 ">
-    
+<div id="atencion" class="mt-32 mb-12 mx-12">
+<p class="text-xl font-semibold text-green-700">Atención</p>
+<hr class="border-green-600" />
+</div>
+
+<div class="w-full flex justify-center ">   
+
     <div class="mx-2 max-w-sm p-6 bg-white border border-gray-200 rounded-lg shadow w-[350px]">
         <svg  xmlns="http://www.w3.org/2000/svg"  width="40"  height="40"  viewBox="0 0 24 24"  fill="none"  stroke="#198a19e3"  stroke-width="1.5"  stroke-linecap="round"  stroke-linejoin="round"  class="icon icon-tabler icons-tabler-outline icon-tabler-user"><path stroke="none" d="M0 0h24v24H0z" fill="none"/><path d="M8 7a4 4 0 1 0 8 0a4 4 0 0 0 -8 0" /><path d="M6 21v-2a4 4 0 0 1 4 -4h4a4 4 0 0 1 4 4v2" /></svg>
         <p class="mb-2 text-xl font-semibold tracking-tight text-gray-900">Atención al público, medicación, autorizaciones, y reintegros</p>
