--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -9,6 +9,7 @@ import Cuerpo from './cuerpo.astro';
 import Atencion from '../components/Atencion.astro';
 import App from '../components/App.astro';
 import Footer from '../components/Footer.astro';
+import Ubicacion from '../components/Ubicacion.astro';
 ---
 
 <Layout title="AMICOS - Asociación Mutual Intercooperativa Solidaria">
@@ -20,6 +21,7 @@ import Footer from '../components/Footer.astro';
 		<Info />
 		<Cuerpo />
 		<Atencion />
+		<Ubicacion />
 		<App />
 		<Footer />
 	</main>
