--- a/src/pages/info.astro
+++ b/src/pages/info.astro
@@ -1,5 +1,10 @@
 
-<div class="grid grid-cols-1 place-content-center py-16 sm:grid-cols-2 md:grid-cols-2 lg:grid-cols-3" id="info">
+<div id="info" class="mt-32 mb-12 mx-12">
+    <p class="text-xl font-semibold text-green-700">Información</p>
+    <hr class="border-green-600" />
+    </div>
+
+<div class="grid grid-cols-1 place-content-center sm:grid-cols-2 md:grid-cols-2 lg:grid-cols-3" id="info">
     
     <!-- PRESTADORES -->
     <div style="width: 320px; height: 340px" class="p-4 mx-auto leading-normal">
@@ -7,7 +12,7 @@
             <div class="group bg-white border border-gray-200 rounded-lg shadow-lg shadow-gray-400/60 hover:opacity-60 hover:shadow-gray-900/80">
                 <img class="rounded-t-lg" src="/planes.jpg" alt="" />
                 <div class="mt-3 mx-4">
-                    <h5 class=" text-2xl font-bold tracking-tighter text-gray-900 ">Prestadores</h5>
+                    <h5 class=" text-2xl font-bold tracking-tighter text-green-800 ">Prestadores</h5>
                     <p class="mb-2 font-normal text-gray-700 dark:text-gray-400">Contamos con prestaciones en las mejores Instituciones de la Provincia.</p>
                 </div>
             </div>
@@ -20,7 +25,7 @@
             <div class="group bg-white border border-gray-200 rounded-lg shadow-lg shadow-gray-400/60 hover:opacity-60 hover:shadow-gray-900/80">
                 <img class="rounded-t-lg" src="planes.jpg" alt="" />
                 <div class="m-4">
-                    <h5 class="mb-2 text-2xl font-bold tracking-tight text-gray-900">Planes</h5>
+                    <h5 class="mb-2 text-2xl font-bold tracking-tight text-green-800">Planes</h5>
                     <p class="font-normal text-gray-700 dark:text-gray-400">Nuestros Planes abarcan una amplia cobertura.</p>
                 </div>
             </div>
@@ -33,7 +38,7 @@
             <div class="group bg-white border border-gray-200 rounded-lg shadow-lg shadow-gray-400/60 hover:opacity-60 hover:shadow-gray-900/80">
                 <img class="rounded-t-lg" src="planes.jpg" alt="" />
                 <div class="m-4">
-                    <h5 class="mb-2 text-2xl font-bold tracking-tight text-gray-900">Vademécum</h5>
+                    <h5 class="mb-2 text-2xl font-bold tracking-tight text-green-800">Vademécum</h5>
                     <p class="font-normal text-gray-700 dark:text-gray-400">Cobertura en medicamentos.</p>
                     <p class="text-white group-hover:text-gray-100">.</p>
                 </div>
@@ -47,7 +52,7 @@
             <div class="group bg-white border border-gray-200 rounded-lg shadow-lg shadow-gray-400/60 hover:opacity-60 hover:shadow-gray-900/80">
                 <img class="rounded-t-lg" src="planes.jpg" alt="" />
                 <div class="m-4">
-                    <h5 class="mb-2 text-2xl font-bold tracking-tight text-gray-900">Delegaciones</h5>
+                    <h5 class="mb-2 text-2xl font-bold tracking-tight text-green-800">Delegaciones</h5>
                     <p class=" font-normal text-gray-700 dark:text-gray-400">Estamos en varias localidades del Interior.</p>
                 </div>
             </div>
@@ -61,7 +66,7 @@
             <div class="group bg-white border border-gray-200 rounded-lg shadow-lg shadow-gray-400/60 hover:opacity-60 hover:shadow-gray-900/80">
                 <img class="rounded-t-lg" src="planes.jpg" alt="" />
                 <div class="m-4">
-                    <h5 class="mb-2 text-2xl font-bold tracking-tight text-gray-900 ">Prestadores | Asesores</h5>
+                    <h5 class="mb-2 text-2xl font-bold tracking-tight text-green-800 ">Prestadores | Asesores</h5>
                     <p class=" font-normal text-gray-700 dark:text-gray-400">Consultá con nuestros Promotores para asesorarte.</p>
                 </div>
             </div>
@@ -71,11 +76,11 @@
     <!--- UBICACION --->
 
     <div style="width: 320px; height: 340px" class="p-4 mx-auto leading-normal">
-        <a href="#">
+        <a href="#ubicacion">
             <div class="group bg-white border border-gray-200 rounded-lg shadow-lg shadow-gray-400/60 hover:opacity-60 hover:shadow-gray-900/80">
                 <img class="rounded-t-lg " src="planes.jpg" alt="" />
                 <div class="m-4">
-                    <h5 class="mb-2 text-2xl font-bold tracking-tight text-gray-900">Ubicación</h5>
+                    <h5 class="mb-2 text-2xl font-bold tracking-tight text-green-800">Ubicación</h5>
                     <p class="pb-6 font-normal text-gray-700 dark:text-gray-400">Dónde nos ubicamos.</p>
                 </div>
             </div>
