--- a/src/pages/info.astro
+++ b/src/pages/info.astro
@@ -4,7 +4,7 @@
     <hr class="border-green-600" />
     </div>
 
-<div class="grid grid-cols-1 place-content-center sm:grid-cols-2 md:grid-cols-2 lg:grid-cols-3" id="info">
+<div class="grid grid-cols-1 place-content-center sm:grid-cols-2 md:grid-cols-2 lg:grid-cols-2 xl:grid-cols-3" id="info">
     
     <!-- PRESTADORES -->
     <div style="width: 320px; height: 340px" class="p-4 mx-auto leading-normal">
