--- a/src/components/HeaderHome.astro
+++ b/src/components/HeaderHome.astro
@@ -1,16 +1,18 @@
 
-<div class="flex justify-start">
-    <div class="flex justify-between items-center py-2 w-full fixed z-10 bg-gradient-to-b from-green-200 to-transparent px-12 sm:px-12 md:px-12 lg:px-24 xl:px-24 2xl:px-64" style="backdrop-filter: blur(15px);">
-    
-    <a href="#">
-        <img
-            class="h-10 hover:opacity-80 overflow-hidden"
-            src="amicos_logo.png"
-            alt="amicos logo"
-        />
-    </a>
 
-    <div class="flex justify-end font-semibold opacity-80 gap-x-9">
+<div class="w-full justify-between px-6 grid grid-cols-1 place-content-between items-center h-32 md:grid-cols-2 md:h-12 md:px-12 lg:px-24 xl:px-24 2xl:px-64 py-2 fixed z-10 bg-gradient-to-b from-green-200 to-transparent" style="backdrop-filter: blur(15px);">
+    <div class="">
+        <a href="#">
+            <img
+                class="h-10 hover:opacity-80"
+                src="amicos_logo.png"
+                alt="amicos logo"
+            />
+        </a>
+    </div>
+
+    <div class="font-semibold opacity-80 gap-x-9 text-2xl md:text-lg flex">
+
         <div>
             <a href="#atencion" class="hover:text-gray-600">Atención</a>
         </div>
@@ -26,9 +28,10 @@
         <div>
             <a href="/ingresar" class="hover:text-gray-600">Ingresar</a>
         </div>
+
     </div> 
+
 </div>
 
-<div style="background-image:url('barra_colores.jpg'); height:6px;" class="mt-14 w-full -z-2">
+<div style="background-image:url('barra_colores.jpg'); height:6px;" class="mt-32 w-[1120px] md:w-full md:mt-12 flex justify-end">
 </div> 
-</div>
