--- a/src/components/HeaderHome.astro
+++ b/src/components/HeaderHome.astro
@@ -1,7 +1,7 @@
 
 
 <div class="w-full justify-between px-6 grid grid-cols-1 place-content-between items-center h-32 md:grid-cols-2 md:h-12 md:px-12 lg:px-24 xl:px-24 2xl:px-64 py-2 fixed z-10 bg-gradient-to-b from-green-200 to-transparent" style="backdrop-filter: blur(15px);">
-    <div class="">
+    <div class="flex justify-around md:justify-between mt-2 md:mt-0">
         <a href="#">
             <img
                 class="h-10 hover:opacity-80"
@@ -11,27 +11,27 @@
         </a>
     </div>
 
-    <div class="font-semibold opacity-80 gap-x-9 text-2xl md:text-lg flex">
+    <div class="font-semibold justify-center opacity-80 gap-x-5 flex md:justify-end">
 
         <div>
-            <a href="#atencion" class="hover:text-gray-600">Atención</a>
+            <a href="#atencion" class="hover:text-gray-600 text-3xl md:text-lg">Atención</a>
         </div>
         <div>
-            <a href="#info" class="hover:text-gray-600">Info</a>
+            <a href="#info" class="hover:text-gray-600 text-3xl md:text-lg">Info</a>
         </div>
         <div>
-            <a href="#historia" class="hover:text-gray-600">Nosotros</a>
+            <a href="#historia" class="hover:text-gray-600 text-3xl md:text-lg">Nosotros</a>
         </div>
         <div>
-            <a href="#redes" class="hover:text-gray-600">Redes</a>
+            <a href="#redes" class="hover:text-gray-600 text-3xl md:text-lg">Redes</a>
         </div>
         <div>
-            <a href="/ingresar" class="hover:text-gray-600">Ingresar</a>
+            <a href="/ingresar" class="hover:text-gray-600 text-3xl md:text-lg">Ingresar</a>
         </div>
 
     </div> 
 
 </div>
 
-<div style="background-image:url('barra_colores.jpg'); height:6px;" class="mt-32 w-[1120px] md:w-full md:mt-12 flex justify-end">
+<div style="background-image:url('barra_colores.jpg'); height:6px;" class="mt-32 w-[610px] lg:w-full md:mt-12 flex justify-end">
 </div> 
