--- a/src/pages/presentacion.astro
+++ b/src/pages/presentacion.astro
@@ -1,7 +1,7 @@
 
-<div class="w-[655px] grid grid-cols-1 gap-4 z-28 place-content-between  pt-28 -mb-4 sm:grid-cols-1 sm:py-2 lg:pl-24 lg:grid-cols-3 sm:w-full" style="background-image:url('image3_1.jpg'); background-size: cover; height:650px;">
+<div class="w-[655px] grid grid-cols-1 gap-4 place-content-between sm:pt-28 p-2 -mb-4 sm:grid-cols-2 sm:py-2 lg:pl-24 lg:grid-cols-3 sm:w-full" style="background-image:url('image3_1.jpg'); background-size: cover; height:650px;">
     <div class="col-span-2">
-        <h1 class="text-6xl font-bold flex flex-row mt-28 pb-4 text-shadow " style="color: rgba(13, 112, 13, 0.884); text-shadow: rgba(27, 27, 27, 0.781) 3px 0 10px;">
+        <h1 class="text-6xl font-bold flex flex-row sm:mt-28 mt-8 pb-4 text-shadow " style="color: rgba(13, 112, 13, 0.884); text-shadow: rgba(27, 27, 27, 0.781) 3px 0 10px;">
             Asociación Mutual <br>
             Intercooperativa Solidaria.
         </h1>
@@ -11,8 +11,8 @@
             Provincia de Córdoba.
         </h2>
     </div>
-    <div style="margin-left:90px; margin-top:80px" class="col-span-1">
-        <div style="margin-bottom:40px">
+    <div class="grid grid-cols-1 place-content-center mx-[100px] mb-48 sm:w-full sm:mx-12 sm:mb-0 sm:col-span-1 sm:grid-cols-1 sm:mt-[120px]">
+        <div class="mb-6 mt-6 sm:mt-0 sm:mx-0 sm:mb-12">
             <a href="/asociarme">
                 <button type="button" class="shadow-lg shadow-gray-800/60 hover:shadow-gray-800/80 text-white bg-gradient-to-br from-blue-400 to-green-600 hover:bg-gradient-to-bl focus:outline-none font-medium rounded-lg text-m  py-2.5 text-center mb-2 w-48 h-14">
                     Asociarme
