--- a/src/components/Contactos.astro
+++ b/src/components/Contactos.astro
@@ -1,6 +1,6 @@
 
 
-<div id="contactos" class=" w-[655px] sm:w-full py-4 flex justify-center text-gray-600"  style="backdrop-filter: blur(15px);">
+<div id="contactos" class="sm:w-full py-4 flex justify-center text-gray-600"  style="backdrop-filter: blur(15px);">
 
     <div>
         <p
