--- a/src/pages/info.astro
+++ b/src/pages/info.astro
@@ -1,10 +1,10 @@
 
-<div id="info" class="w-[655px] sm:w-full mt-32 mb-12 mx-12 sm:mx-12">
+<div id="info" class="mt-32 mb-12 mx-12">
     <p class="text-xl font-semibold text-green-700">Información</p>
     <hr class="border-green-600" />
     </div>
 
-<div class="w-[655px] sm:w-full grid grid-cols-1 place-content-center sm:grid-cols-2 md:grid-cols-2 lg:grid-cols-2 xl:grid-cols-3" id="info">
+<div class="grid grid-cols-1 place-content-center sm:grid-cols-2 md:grid-cols-2 lg:grid-cols-2 xl:grid-cols-3" id="info">
     
     <!-- PRESTADORES -->
     <div style="width: 320px; height: 340px" class="p-4 mx-auto leading-normal">
