--- a/src/components/HeaderHome.astro
+++ b/src/components/HeaderHome.astro
@@ -1,6 +1,6 @@
 
 
-<div class="w-full px-6 grid grid-cols-1 place-content-between items-center h-32 md:grid-cols-2 md:h-12 md:px-12 lg:px-24 xl:px-24 2xl:px-64 py-2 fixed z-10 bg-gradient-to-b from-green-200 to-transparent" style="backdrop-filter: blur(15px);">
+<div class="sm:w-full px-6 grid grid-cols-1 place-content-between items-center h-32 md:grid-cols-2 md:h-12 md:px-12 lg:px-24 xl:px-24 2xl:px-64 py-2 fixed z-10 bg-gradient-to-b from-green-200 to-transparent" style="backdrop-filter: blur(15px);">
     <div class="flex justify-around md:justify-between mt-2 md:mt-0">
         <a href="#">
             <img
