--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -13,11 +13,11 @@ import Ubicacion from '../components/Ubicacion.astro';
 ---
 
 <Layout title="AMICOS - Asociación Mutual Intercooperativa Solidaria">
-	<main>
+	<main class="w-[650px] sm:w-full">
 		<HeaderHome />
 		<Background />
 		<Presentacion />
-		<Contactos />
+		<!--<Contactos /> -->
 		<Info />
 		<Cuerpo />
 		<Atencion />
