--- a/src/pages/presentacion.astro
+++ b/src/pages/presentacion.astro
@@ -1,18 +1,18 @@
 
-<div class="w-[655px] grid grid-cols-1 place-content-between sm:pt-28 p-2 -mb-4 sm:grid-cols-2 sm:py-2 lg:pl-24 lg:grid-cols-3  sm:w-full sm:h-screen" style="background-image:url('image3_1.jpg'); background-size: cover">
+<div class="w-[655px] grid grid-cols-1 place-content-start sm:pt-28 -mb-4 sm:grid-cols-2 sm:py-2 lg:grid-cols-3 sm:w-full sm:h-screen" style="background-image:url('image3_1.jpg'); background-size: cover">
     <div class="col-span-2">
-        <h1 class="text-6xl font-bold flex flex-row sm:mt-28 mt-8 pb-4 text-shadow " style="color: rgba(252, 252, 252, 0.89); text-shadow: rgba(27, 27, 27, 0.781) 3px 0 10px;">
+        <h1 class="pl-4 sm:pl-12 text-6xl font-bold flex flex-row sm:mt-28 mt-8 text-shadow " style="color: rgba(252, 252, 252, 0.89); text-shadow: rgba(27, 27, 27, 0.781) 3px 0 10px;">
             Asociación Mutual <br>
             Intercooperativa Solidaria.
         </h1>
-        <h2 class="text-xl opacity-80 inset-0 -z-10 font-bold" style="color: rgba(3, 19, 3, 0.961);">
+        <h2 class="pb-4 sm:pl-12 text-xl opacity-80 inset-0 -z-10 font-bold" style="color: rgba(3, 19, 3, 0.961);">
             Mas de 25 años de seriedad y prestigio. Otorgando <br>	
             amplia cobertura en los mejores Centros Médicos de la <br>
             Provincia de Córdoba.
         </h2>
     </div>
-    <div class="grid grid-cols-1 place-content-center mx-[100px] mb-48 sm:w-full sm:mx-12 sm:mb-0 sm:col-span-1 sm:grid-cols-1 sm:mt-[120px]">
-        <div class="mb-6 mt-6 sm:mt-0 sm:mx-0 sm:mb-12">
+    <div class="grid grid-cols-1 place-content-center mx-[100px] mb-48 sm:ml-12 sm:mb-0 sm:col-span-1 sm:grid-cols-1 sm:mt-[120px]">
+        <div class="mb-6 mt-6 sm:mt-0 sm:mb-12">
             <a href="/asociarme">
                 <button type="button" class="shadow-lg shadow-gray-800/60 hover:shadow-gray-800/80 text-white bg-gradient-to-br from-blue-400 to-green-600 hover:bg-gradient-to-bl focus:outline-none font-medium rounded-lg text-m  py-2.5 text-center mb-2 w-48 h-14">
                     Asociarme
