--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -14,10 +14,10 @@ import Ubicacion from '../components/Ubicacion.astro';
 
 <Layout title="AMICOS - Asociación Mutual Intercooperativa Solidaria">
 	<main class="w-[650px] sm:w-full">
-		<!--<HeaderHome /> -->
+		<HeaderHome />
 		<Background />
 		<Presentacion />
-		<!--<Contactos /> -->
+		<Contactos />
 		<Info />
 		<Cuerpo />
 		<Atencion />
