--- a/src/components/Contactos.astro
+++ b/src/components/Contactos.astro
@@ -4,7 +4,7 @@
 
     <div>
         <p
-            class="justify-center px-[81px] inline-flex p-4 bg-white-100 border-r-2 border-red-500 hover:text-gray-900">
+            class="justify-center px-[81.3px] inline-flex p-4 bg-white-100 border-r-2 border-red-500 hover:text-gray-900">
             <svg xmlns="http://www.w3.org/2000/svg"  width="24"  height="24"  viewBox="0 0 24 24"  fill="none"  stroke="currentColor"  stroke-width="1.5"  stroke-linecap="round"  stroke-linejoin="round"  class="icon icon-tabler icons-tabler-outline icon-tabler-phone" style="margin-right: 21px;"><path stroke="none" d="M0 0h24v24H0z" fill="none"/><path d="M5 4h4l2 5l-2.5 1.5a11 11 0 0 0 5 5l1.5 -2.5l5 2v4a2 2 0 0 1 -2 2a16 16 0 0 1 -15 -15a2 2 0 0 1 2 -2" /></svg>
             0351-4217152
         </p>
@@ -12,7 +12,7 @@
     
     <div>
         <p 
-            class="justify-center px-[81.5px] inline-flex p-4 bg-white-100 border-r-2 border-green-500 hover:text-gray-900">
+            class="justify-center px-[81.5px] inline-flex p-4 bg-white-100 sm:border-r-2 sm:border-green-500 hover:text-gray-900">
             <svg  xmlns="http://www.w3.org/2000/svg"  width="24"  height="24"  viewBox="0 0 24 24"  fill="none"  stroke="currentColor"  stroke-width="1.5"  stroke-linecap="round"  stroke-linejoin="round"  class="icon icon-tabler icons-tabler-outline icon-tabler-phone" style="margin-right: 21px;"><path stroke="none" d="M0 0h24v24H0z" fill="none"/><path d="M5 4h4l2 5l-2.5 1.5a11 11 0 0 0 5 5l1.5 -2.5l5 2v4a2 2 0 0 1 -2 2a16 16 0 0 1 -15 -15a2 2 0 0 1 2 -2" /></svg>
             351-3505160
         </p>
