--- a/src/pages/presentacion.astro
+++ b/src/pages/presentacion.astro
@@ -5,7 +5,7 @@
             Asociación Mutual <br>
             Intercooperativa Solidaria.
         </h1>
-        <h2 class="pb-4 sm:pl-12 text-xl opacity-80 inset-0 -z-10 font-bold" style="color: rgba(3, 19, 3, 0.961);">
+        <h2 class="pl-4 pb-4 sm:pl-12 text-xl opacity-80 inset-0 -z-10 font-bold" style="color: rgba(3, 19, 3, 0.961);">
             Mas de 25 años de seriedad y prestigio. Otorgando <br>	
             amplia cobertura en los mejores Centros Médicos de la <br>
             Provincia de Córdoba.
