--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -5,7 +5,7 @@ import Instagram from "../icons/Instagram.astro"
 
 <footer class=" rounded-lg m-4 pt-24">
     <div class="w-full max-w-screen-xl mx-auto p-4 md:py-7">
-        <div class="sm:flex sm:items-center sm:justify-between">
+        <div class="flex items-center justify-between">
             
             <a href="#" class="flex items-center mb-4 sm:mb-0 space-x-3 rtl:space-x-reverse">
                 <img class="h-7" src="amicos_logo.png" alt="">
