--- a/src/components/App.astro
+++ b/src/components/App.astro
@@ -4,25 +4,25 @@ import Play from '../icons/Play.astro';
 
 <div style="background-image:url('barra_colores.jpg'); height:6px;" class="w-full -z-2 mt-32">
 </div> 
-<div class="w-full h-screen z-28 py-8 -mb-4 grid grid-cols-1 place-content-start" style="background-image:url('nuevofondoapp.png'); background-size: cover; height:650px; background-position-y: center;">
+<div class="w-full h-screen z-28 -mb-4 grid grid-cols-1 place-content-start bg-right sm:bg-center" style="background-image:url('app3.png'); background-size: cover; height:650px; background-position-y: center;">
     <div class="">
-        <h1 class="ml-24 mt-16 text-6xl font-bold text-shadow" style="color: rgb(243, 245, 243); text-shadow: rgba(27, 27, 27, 0.781) 3px 0 10px;">
+        <h1 class="ml-4 sm:ml-24 mt-8 sm:mt-16 text-6xl font-bold text-shadow" style="color: rgb(243, 245, 243); text-shadow: rgba(27, 27, 27, 0.781) 3px 0 10px;">
             Conocé nuestra <br>
             App.
         </h1>
-        <h6 class="ml-24 mt-12 m-4 text-3xl font-bold text-shadow" style="color: rgb(243, 245, 243); text-shadow: rgba(27, 27, 27, 0.781) 3px 0 10px;">
+        <h6 class="ml-4 sm:ml-24 sm:mt-12 text-3xl font-bold text-shadow" style="color: rgb(243, 245, 243); text-shadow: rgba(27, 27, 27, 0.781) 3px 0 10px;">
             Con la App podés acceder a:
         </h6>
         
-        <ul class="ml-28 p-4 text-xl text-shadow" style="color: rgb(243, 245, 243); text-shadow: rgba(27, 27, 27, 0.781) 3px 0 10px;">
-            <li>● Credencial digital de todo el grupo famliar.</li>
-            <li>● Información sobre el estado de tu cuenta.</li>
-            <li>● Listado de prestadores y delegaciones.</li>
-            <li>● Nuestros teléfonos útiles y formas de contacto.</li>
+        <ul class="sm:ml-28 p-4 mt-8 sm:mt-0 text-xl text-shadow" style="color: rgb(243, 245, 243); text-shadow: rgba(27, 27, 27, 0.781) 3px 0 10px;">
+            <li class="w-[320px] sm:w-full">● Credencial digital de todo el grupo famliar.</li>
+            <li class="w-[320px] sm:w-full">● Información sobre el estado de tu cuenta.</li>
+            <li class="w-[320px] sm:w-full">● Listado de prestadores y delegaciones.</li>
+            <li class="w-[320px] sm:w-full">● Nuestros teléfonos útiles y formas de contacto.</li>
         </ul>
         
     </div>
-    <div class="mx-56 my-6 p-8">
+    <div class="mx-32 my-6 p-8">
         <a href="https://play.google.com/store/apps/details?id=ar.com.amicos">
             <button type="button" class="text-gray-900 shadow-2xl shadow-gray-700 hover:shadow-2xl hover:shadow-gray-800 text-lg bg-white hover:bg-gray-100 border border-gray-200 focus:ring-4 focus:outline-none focus:ring-gray-100 font-medium rounded-lg w-64 p-12 py-2.5 inline-flex items-center">
                 <Play class="h-8 w-8 mr-4"/>
