--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -4,8 +4,8 @@ import Instagram from "../icons/Instagram.astro"
 ---
 
 <footer class=" rounded-lg m-4 pt-24">
-    <div class="w-full max-w-screen-xl mx-auto p-4 md:py-7">
-        <div class="flex items-center justify-between">
+    <div class="w-full max-w-screen-xl mx-auto sm:p-2 md:py-2">
+        <div class="flex items-center justify-between py-2">
             
             <a href="#" class="flex items-center mb-4 sm:mb-0 space-x-3 rtl:space-x-reverse">
                 <img class="h-7" src="amicos_logo.png" alt="">
@@ -30,7 +30,7 @@ import Instagram from "../icons/Instagram.astro"
                 </li>
             </ul>
         </div>
-        <hr class="my-2 border-gray-400 sm:mx-auto lg:my-7" />
+        <hr class="my-2 border-gray-400 sm:mx-auto" />
         <div class="grid grid-cols-2 place-content-between">
             <div class="text-gray-700">
                 <p>Asociación Mutual Intercooperativa Solidaria. <br>
