--- a/src/pages/cuerpo.astro
+++ b/src/pages/cuerpo.astro
@@ -1,7 +1,7 @@
 <div style="background-image:url('barra_colores.jpg'); height:6px;" class="mt-32 w-full -z-2">
 </div> 
 
-<div class="grid grid-cols-1 place-content-around p-2 sm:py-16" style="background-image:url('image2.jpg'); background-size: cover; height:800px;">
+<div class="grid grid-cols-1 place-content-around p-2 sm:py-16 bg-center" style="background-image:url('image2.jpg'); background-size: cover; height:800px;">
   
     <div class="p-4 mx-8 px-8 sm:p-4 sm:mx-24 leading-normal  rounded-2xl shadow-2xl h-full hover:shadow-xl hover:opacity-90" style="backdrop-filter: blur(30px);">
         <h6 class="mb-1 text-4xl font-bold tracking-tight text-green-700 text-pretty" style="text-shadow: rgba(216, 216, 216, 0.781) 3px 0 10px; ">Atención personalizada</h6>
