--- a/src/pages/presentacion.astro
+++ b/src/pages/presentacion.astro
@@ -1,5 +1,5 @@
 
-<div class="w-[655px] grid grid-cols-1 place-content-start sm:pt-28 -mb-4 sm:grid-cols-2 sm:py-2 lg:grid-cols-3 sm:w-full sm:h-screen" style="background-image:url('image3_1.jpg'); background-size: cover">
+<div class="w-[655px] grid grid-cols-1 place-content-start sm:pt-28 -mb-4 sm:grid-cols-2 sm:py-2 lg:grid-cols-3 sm:w-full sm:h-screen bg-left sm:bg-center" style="background-image:url('image3_1.jpg'); background-size: cover">
     <div class="col-span-2">
         <h1 class="pl-4 sm:pl-12 text-6xl font-bold flex flex-row sm:mt-28 mt-8 text-shadow " style="color: rgba(252, 252, 252, 0.89); text-shadow: rgba(27, 27, 27, 0.781) 3px 0 10px;">
             Asociación Mutual <br>
