--- a/src/components/App.astro
+++ b/src/components/App.astro
@@ -22,7 +22,7 @@ import Play from '../icons/Play.astro';
         </ul>
         
     </div>
-    <div class="mx-32 my-6 p-8">
+    <div class="p-4 sm:mx-20 my-6">
         <a href="https://play.google.com/store/apps/details?id=ar.com.amicos">
             <button type="button" class="text-gray-900 shadow-2xl shadow-gray-700 hover:shadow-2xl hover:shadow-gray-800 text-lg bg-white hover:bg-gray-100 border border-gray-200 focus:ring-4 focus:outline-none focus:ring-gray-100 font-medium rounded-lg w-64 p-12 py-2.5 inline-flex items-center">
                 <Play class="h-8 w-8 mr-4"/>
