--- a/src/pages/presentacion.astro
+++ b/src/pages/presentacion.astro
@@ -5,21 +5,21 @@
             Asociación Mutual <br>
             Intercooperativa Solidaria.
         </h1>
-        <h2 class="pl-4 pb-4 sm:pl-12 text-xl opacity-80 inset-0 -z-10 font-bold" style="color: rgba(3, 19, 3, 0.961);">
+        <h2 class="pl-4 pb-4 sm:pl-12 text-xl opacity-80 inset-0 -z-10 font-bold" style="color: rgba(3, 19, 3, 0.961); text-shadow: rgba(255, 255, 255, 0.781) 3px 1px 5px; ">
             Mas de 25 años de seriedad y prestigio. Otorgando <br>	
             amplia cobertura en los mejores Centros Médicos de la <br>
             Provincia de Córdoba.
         </h2>
     </div>
-    <div class="grid grid-cols-1 place-content-center mx-[100px] mb-48 sm:ml-12 sm:mb-0 sm:col-span-1 sm:grid-cols-1 sm:mt-[120px]">
-        <div class="mb-6 mt-6 sm:mt-0 sm:mb-12">
+    <div class="grid grid-cols-2 place-content-center mx-[100px] mb-48 sm:ml-12 sm:mb-0 sm:col-span-1 sm:grid-cols-1 sm:mt-[120px] sm:w-full">
+        <div class="sm:mt-0 sm:mb-12">
             <a href="/asociarme">
                 <button type="button" class="shadow-lg shadow-gray-800/60 hover:shadow-gray-800/80 text-white bg-gradient-to-br from-blue-400 to-green-600 hover:bg-gradient-to-bl focus:outline-none font-medium rounded-lg text-m  py-2.5 text-center mb-2 w-48 h-14">
                     Asociarme
                 </button>
             </a>
         </div>
-        <div>
+        <div class="">
             <a href="/ingresar">
                 <button type="button" class="shadow-lg shadow-gray-800/60 hover:shadow-gray-800/80 text-white bg-gradient-to-br from-green-600 to-blue-400 hover:bg-gradient-to-bl focus:outline-none font-medium rounded-lg text-m  py-2.5 text-center mb-2 w-48 h-14">
                     Soy asociado
