--- a/src/pages/presentacion.astro
+++ b/src/pages/presentacion.astro
@@ -5,7 +5,7 @@
             Asociación Mutual <br>
             Intercooperativa Solidaria.
         </h1>
-        <h2 class="pl-4 pb-4 sm:pl-12 text-xl opacity-80 inset-0 -z-10 font-bold" style="color: rgba(3, 19, 3, 0.961); text-shadow: rgba(255, 255, 255, 0.781) 3px 1px 5px; ">
+        <h2 class="pl-4 pb-4 sm:pl-12 text-2xl sm:text-xl opacity-80 inset-0 -z-10 font-bold" style="color: rgba(3, 19, 3, 0.961); text-shadow: rgba(255, 255, 255, 0.781) 3px 1px 5px; ">
             Mas de 25 años de seriedad y prestigio. Otorgando <br>	
             amplia cobertura en los mejores Centros Médicos de la <br>
             Provincia de Córdoba.
