--- a/src/pages/presentacion.astro
+++ b/src/pages/presentacion.astro
@@ -1,17 +1,17 @@
 
 <div class="w-[655px] grid grid-cols-1 place-content-start sm:pt-28 -mb-4 sm:grid-cols-2 sm:py-2 lg:grid-cols-3 sm:w-full sm:h-screen bg-left sm:bg-center" style="background-image:url('image3_1.jpg'); background-size: cover">
     <div class="col-span-2">
-        <h1 class="pl-4 sm:pl-12 text-6xl font-bold flex flex-row sm:mt-28 mt-8 text-shadow " style="color: rgba(252, 252, 252, 0.89); text-shadow: rgba(27, 27, 27, 0.781) 3px 0 10px;">
+        <h1 class="pl-4 sm:pl-12 text-6xl font-bold flex flex-row sm:mt-28 mt-16 text-shadow " style="color: rgba(252, 252, 252, 0.89); text-shadow: rgba(27, 27, 27, 0.781) 3px 0 10px;">
             Asociación Mutual <br>
             Intercooperativa Solidaria.
         </h1>
-        <h2 class="pl-4 pb-4 sm:pl-12 text-2xl sm:text-xl opacity-80 inset-0 -z-10 font-bold" style="color: rgba(3, 19, 3, 0.961); text-shadow: rgba(255, 255, 255, 0.781) 3px 1px 5px; ">
+        <h2 class="pt-10 sm:pt-0 pl-4 pb-4 sm:pl-12 text-2xl sm:text-xl opacity-80 inset-0 -z-10 font-bold" style="color: rgba(3, 19, 3, 0.961); text-shadow: rgba(255, 255, 255, 0.781) 3px 1px 5px; ">
             Mas de 25 años de seriedad y prestigio. Otorgando <br>	
             amplia cobertura en los mejores Centros Médicos de la <br>
             Provincia de Córdoba.
         </h2>
     </div>
-    <div class="mx-24 pt-24 sm:pt-0 grid grid-cols-2 place-content-center sm:mx-[100px] mb-48 sm:ml-12 sm:mb-0 sm:col-span-1 sm:grid-cols-1 sm:mt-[120px] sm:w-full">
+    <div class="mx-24 pt-12 sm:pt-0 grid grid-cols-2 place-content-center sm:mx-[100px] mb-48 sm:ml-12 sm:mb-0 sm:col-span-1 sm:grid-cols-1 sm:mt-[120px] sm:w-full">
         <div class="sm:mt-0 sm:mb-12">
             <a href="/asociarme">
                 <button type="button" class="shadow-lg shadow-gray-800/60 hover:shadow-gray-800/80 text-white bg-gradient-to-br from-blue-400 to-green-600 hover:bg-gradient-to-bl focus:outline-none font-medium rounded-lg sm:text-lg text-2xl py-2.5 text-center mb-2 w-52 h-20 sm:w-48 sm:h-14">
