imagenes en la nube

--- a/src/components/HeaderHome.astro
+++ b/src/components/HeaderHome.astro
@@ -5,7 +5,7 @@
         <a href="#">
             <img
                 class="h-10 hover:opacity-80"
-                src="amicos_logo.png"
+                src="https://firebasestorage.googleapis.com/v0/b/amicosimagenes.appspot.com/o/amicos_logo.png?alt=media&token=4b0e4ed1-01b1-43b6-aff1-a0762b71b1c7"
                 alt="amicos logo"
             />
         </a>
@@ -33,5 +33,5 @@
 
 </div>
 
-<div style="background-image:url('barra_colores.jpg'); height:6px;" class="mt-32 w-[655px] lg:w-full md:mt-12 flex justify-end">
+<div style="background-image:url('https://firebasestorage.googleapis.com/v0/b/amicosimagenes.appspot.com/o/barra_colores.jpg?alt=media&token=0efb6b48-846a-44e6-bd06-34f98f7574dd'); height:6px;" class="mt-32 w-[655px] lg:w-full md:mt-12 flex justify-end">
 </div> 
