imagenes en la nube

--- a/src/pages/presentacion.astro
+++ b/src/pages/presentacion.astro
@@ -11,7 +11,7 @@
             Provincia de Córdoba.
         </h2>
     </div>
-    <div class="mx-24 pt-12 sm:pt-0 grid grid-cols-2 place-content-center sm:mx-[100px] mb-48 sm:ml-12 sm:mb-0 sm:col-span-1 sm:grid-cols-1 sm:mt-[120px] sm:w-full">
+    <div class="mx-24 pt-12 sm:pt-0 grid grid-cols-2 place-content-center sm:mx-[100px] mb-48 sm:ml-12 sm:mb-0 sm:col-span-1 sm:grid-cols-1 sm:mt-[120px] ">
         <div class="sm:mt-0 sm:mb-12">
             <a href="/asociarme">
                 <button type="button" class="shadow-lg shadow-gray-800/60 hover:shadow-gray-800/80 text-white bg-gradient-to-br from-blue-400 to-green-600 hover:bg-gradient-to-bl focus:outline-none font-medium rounded-lg sm:text-lg text-2xl py-2.5 text-center mb-2 w-52 h-20 sm:w-48 sm:h-14">
