imagenes en la nube

--- a/src/pages/cuerpo.astro
+++ b/src/pages/cuerpo.astro
@@ -1,7 +1,7 @@
-<div style="background-image:url('https://firebasestorage.googleapis.com/v0/b/amicosimagenes.appspot.com/o/barra_colores.jpg?alt=media&token=0efb6b48-846a-44e6-bd06-34f98f7574dd'); height:6px;" class="mt-32 w-full -z-2">
+<div style="background-image:url('https://firebasestorage.googleapis.com/v0/b/amicosimagenes.appspot.com/o/barra_colores.jpg?alt=media&token=0efb6b48-846a-44e6-bd06-34f98f7574dd'); height:6px;" class="mt-32 w-[657px] sm:w-full -z-2">
 </div> 
 
-<div class="grid grid-cols-1 place-content-around p-2 sm:py-16 bg-center" style="background-image:url('https://firebasestorage.googleapis.com/v0/b/amicosimagenes.appspot.com/o/image2.jpg?alt=media&token=32b69921-18fe-42e8-a324-6a32295f5e71'); background-size: cover; height:800px;">
+<div class="w-[657px] sm:w-full grid grid-cols-1 place-content-around p-2 sm:py-16 bg-center" style="background-image:url('https://firebasestorage.googleapis.com/v0/b/amicosimagenes.appspot.com/o/image2.jpg?alt=media&token=32b69921-18fe-42e8-a324-6a32295f5e71'); background-size: cover; height:800px;">
   
     <div class="p-4 mx-8 px-8 sm:p-4 sm:mx-24 leading-normal  rounded-2xl shadow-2xl h-full hover:shadow-xl hover:opacity-90" style="backdrop-filter: blur(30px);">
         <h6 class="mb-1 text-4xl font-bold tracking-tight text-green-700 text-pretty" style="text-shadow: rgba(216, 216, 216, 0.781) 3px 0 10px; ">Atención personalizada</h6>
@@ -20,5 +20,5 @@
 
   
 </div>
-<div style="background-image:url('https://firebasestorage.googleapis.com/v0/b/amicosimagenes.appspot.com/o/barra_colores.jpg?alt=media&token=0efb6b48-846a-44e6-bd06-34f98f7574dd'); height:6px;" class="w-full -z-2">
+<div style="background-image:url('https://firebasestorage.googleapis.com/v0/b/amicosimagenes.appspot.com/o/barra_colores.jpg?alt=media&token=0efb6b48-846a-44e6-bd06-34f98f7574dd'); height:6px;" class="w-[657px] sm:w-full -z-2">
 </div> 
