--- a/src/components/App.astro
+++ b/src/components/App.astro
@@ -2,9 +2,9 @@
 import Play from '../icons/Play.astro';
 ---
 
-<div style="background-image:url('https://firebasestorage.googleapis.com/v0/b/amicosimagenes.appspot.com/o/barra_colores.jpg?alt=media&token=0efb6b48-846a-44e6-bd06-34f98f7574dd'); height:6px;" class="w-full -z-2 mt-32">
+<div style="background-image:url('https://firebasestorage.googleapis.com/v0/b/amicosimagenes.appspot.com/o/barra_colores.jpg?alt=media&token=0efb6b48-846a-44e6-bd06-34f98f7574dd'); height:6px;" class="w-[657px] sm:w-full -z-2 mt-32">
 </div> 
-<div class="w-full h-screen z-28 -mb-4 grid grid-cols-1 place-content-start bg-right sm:bg-center" style="background-image:url('https://firebasestorage.googleapis.com/v0/b/amicosimagenes.appspot.com/o/app3.png?alt=media&token=1f6a8076-1791-480a-80f2-70390e8f2b14'); background-size: cover; height:650px; background-position-y: center;">
+<div class="w-[657px] sm:w-full h-screen z-28 -mb-4 grid grid-cols-1 place-content-start bg-right sm:bg-center" style="background-image:url('https://firebasestorage.googleapis.com/v0/b/amicosimagenes.appspot.com/o/app3.png?alt=media&token=1f6a8076-1791-480a-80f2-70390e8f2b14'); background-size: cover; height:650px; background-position-y: center;">
     <div class="">
         <h1 class="ml-4 sm:ml-24 mt-8 sm:mt-16 text-6xl font-bold text-shadow" style="color: rgb(243, 245, 243); text-shadow: rgba(27, 27, 27, 0.781) 3px 0 10px;">
             Conocé nuestra <br>
@@ -32,5 +32,5 @@ import Play from '../icons/Play.astro';
     </div>
 
 </div>
-<div style="background-image:url('https://firebasestorage.googleapis.com/v0/b/amicosimagenes.appspot.com/o/barra_colores.jpg?alt=media&token=0efb6b48-846a-44e6-bd06-34f98f7574dd'); height:6px;" class="mt-4 w-full -z-2">
+<div style="background-image:url('https://firebasestorage.googleapis.com/v0/b/amicosimagenes.appspot.com/o/barra_colores.jpg?alt=media&token=0efb6b48-846a-44e6-bd06-34f98f7574dd'); height:6px;" class="mt-4 w-[657px] sm:w-full -z-2">
 </div> 
