imagenes en la nube

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,21 +1,21 @@
-<header class="flex justify-start">
-    <div class="flex justify-between items-center py-2 w-full  px-24 fixed  z-10 bg-white bg-gradient-to-b from-green-200 to-transparent ">
-    
-        <a href="/">
+
+
+<div class="sm:w-full px-6 grid grid-cols-1 place-content-between items-center h-32 md:grid-cols-2 md:h-12 md:px-12 lg:px-24 xl:px-24 py-2 fixed z-10 bg-gradient-to-b from-green-200 to-transparent" style="backdrop-filter: blur(15px);">
+    <div class="flex justify-around md:justify-between mt-2 md:mt-0">
+        <a href="#">
             <img
                 class="h-10 hover:opacity-80"
-                src="../../public/assets/amicos_logo.png"
+                src="https://firebasestorage.googleapis.com/v0/b/amicosimagenes.appspot.com/o/amicos_logo.png?alt=media&token=4b0e4ed1-01b1-43b6-aff1-a0762b71b1c7"
                 alt="amicos logo"
             />
         </a>
-    
-        <div class="flex justify-end gap-x-9">
-            <div>
-                <a href="/" class="hover:text-gray-600">Volver</a>
-            </div>
-        </div> 
     </div>
-    
-    <div style="background-image:url('../../public/assets/barra_colores.jpg'); height:7px;" class="mt-14 w-full -z-2">
-    </div>  
-</header>
+
+    <div class="font-semibold justify-center mb-2 opacity-80 gap-x-6 flex md:justify-end">
+        <div>
+            <a href="/" class="hover:text-gray-600 text-3xl md:text-lg">Volver</a>
+        </div>
+
+    </div> 
+
+</div>
