--- a/src/pages/info.astro
+++ b/src/pages/info.astro
@@ -8,7 +8,7 @@
     
     <!-- PRESTADORES -->
     <div style="width: 320px; height: 340px" class="p-4 mx-auto leading-normal">
-        <a href="#">
+        <a href="/prestadores">
             <div class="group bg-white border border-gray-200 rounded-lg shadow-lg shadow-gray-400/60 hover:opacity-60 hover:shadow-gray-900/80">
                 <img class="rounded-t-lg" src="https://firebasestorage.googleapis.com/v0/b/amicosimagenes.appspot.com/o/infoImage.png?alt=media&token=ce98ab2f-25be-43d0-96e7-ed806b30c6a1" alt="" />
                 <div class="mt-3 mx-4">
