imagenes en la nube

--- a/src/pages/prestadores.astro
+++ b/src/pages/prestadores.astro
@@ -9,10 +9,10 @@ const posts = await response.json();
 
 
 <Layout title="AMICOS - Asociación Mutual Intercooperativa Solidaria">
-	<main class=" sm:w-full">
+	<main class="w-[650px] sm:w-full">
 		<Header />
 		<Background />
-        <div class=" w-[650px] shadow-2xl rounded-lg mx-auto mt-24 py-4 px-4">
+        <div class="w-[640px] sm:w-[670px] shadow-2xl rounded-lg mx-auto mt-24 py-4 px-4">
             <div class="flex flex-column sm:flex-row flex-wrap space-y-4 sm:space-y-0 items-center justify-between pb-4">
                 <div>
                     <button id="dropdownRadioButton" data-dropdown-toggle="dropdownRadio" class="inline-flex items-center text-gray-500 bg-white border border-gray-300 focus:outline-none hover:bg-gray-100 focus:ring-4 focus:ring-gray-100 font-medium rounded-lg text-sm px-3 py-1.5 dark:bg-gray-800 dark:text-white dark:border-gray-600 dark:hover:bg-gray-700 dark:hover:border-gray-600 dark:focus:ring-gray-700" type="button">
