--- a/src/pages/prestadores.astro
+++ b/src/pages/prestadores.astro
@@ -9,10 +9,10 @@ const posts = await response.json();
 
 
 <Layout title="AMICOS - Asociación Mutual Intercooperativa Solidaria">
-	<main class="w-[650px] sm:w-full">
-		<Header />
+	<main class="w-[657px] sm:w-full">
+        <Header />
 		<Background />
-        <div class="w-[640px] sm:w-[670px] shadow-2xl rounded-lg mx-auto mt-24 py-4 px-4">
+        <div class="w-[650px] sm:w-[680px] shadow-2xl rounded-lg mx-auto sm:mt-20 mt-28 sm:py-4 px-2">
             <div class="flex flex-column sm:flex-row flex-wrap space-y-4 sm:space-y-0 items-center justify-between pb-4">
                 <div>
                     <button id="dropdownRadioButton" data-dropdown-toggle="dropdownRadio" class="inline-flex items-center text-gray-500 bg-white border border-gray-300 focus:outline-none hover:bg-gray-100 focus:ring-4 focus:ring-gray-100 font-medium rounded-lg text-sm px-3 py-1.5 dark:bg-gray-800 dark:text-white dark:border-gray-600 dark:hover:bg-gray-700 dark:hover:border-gray-600 dark:focus:ring-gray-700" type="button">
@@ -61,15 +61,15 @@ const posts = await response.json();
                     </div>
                 </div>
                 <label for="table-search" class="sr-only">Search</label>
-                <div class="relative">
+                <div class="relative flex items-start">
                     <div class="absolute inset-y-0 left-0 rtl:inset-r-0 rtl:right-0 flex items-center ps-3 pointer-events-none">
                         <svg class="w-5 h-5 text-gray-500 dark:text-gray-400" aria-hidden="true" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" d="M8 4a4 4 0 100 8 4 4 0 000-8zM2 8a6 6 0 1110.89 3.476l4.817 4.817a1 1 0 01-1.414 1.414l-4.816-4.816A6 6 0 012 8z" clip-rule="evenodd"></path></svg>
                     </div>
                     <input type="text" id="table-search" class="block p-2 ps-10 text-sm text-gray-900 border border-gray-300 rounded-lg w-80 bg-gray-50 focus:ring-blue-500 focus:border-blue-500 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500" placeholder="Search for items">
                 </div>
             </div>
-            <table class="w-full text-sm text-left rtl:text-right text-gray-500 dark:text-gray-400">
-                <thead class="text-xs text-gray-700 uppercase bg-gray-50 dark:bg-gray-700 dark:text-gray-400">
+            <table class="w-[640px] sm:w-[660px] mx-auto rounded-xl py-4 px-3 text-sm text-left rtl:text-right text-gray-500 dark:text-gray-400">
+                <thead class="text-xs text-gray-700 uppercase rounded-xl bg-gray-50 dark:bg-gray-700 dark:text-gray-400">
                     <tr>
                         <th scope="col" class="px-6 py-3">
                             id
@@ -110,6 +110,6 @@ const posts = await response.json();
                 </tbody>
             </table>
         </div>
-        <Footer />
+        <Footer class="w-[657px] sm:w-full"/>
 	</main>
 </Layout>
