--- a/src/pages/prestadores.astro
+++ b/src/pages/prestadores.astro
@@ -9,9 +9,14 @@ const posts = await response.json();
 
 
 <Layout title="AMICOS - Asociación Mutual Intercooperativa Solidaria">
-	<main class="w-[657px] sm:w-full">
+	<main>
         <Header />
 		<Background />
+        
+        <div id="atencion" class="mt-40 mb-12 px-12 w-[650px] sm:w-full">
+            <p class="text-xl font-semibold text-green-700">Prestadores</p>
+            <hr class="border-green-600" />
+        </div>
         <div class="w-[650px] sm:w-[680px] shadow-2xl rounded-lg mx-auto sm:mt-20 mt-28 sm:py-4 px-2">
             <div class="flex flex-column sm:flex-row flex-wrap space-y-4 sm:space-y-0 items-center justify-between pb-4">
                 <div>
@@ -67,8 +72,8 @@ const posts = await response.json();
                     </div>
                     <input type="text" id="table-search" class="block p-2 ps-10 text-sm text-gray-900 border border-gray-300 rounded-lg w-80 bg-gray-50 focus:ring-blue-500 focus:border-blue-500 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500" placeholder="Search for items">
                 </div>
-            </div>
-            <table class="w-[640px] sm:w-[660px] mx-auto rounded-xl py-4 px-3 text-sm text-left rtl:text-right text-gray-500 dark:text-gray-400">
+            </div> 
+            <table class="w-[630px] sm:w-[660px] mx-auto rounded-xl py-4 px-3 text-sm text-left rtl:text-right text-gray-500 dark:text-gray-400">
                 <thead class="text-xs text-gray-700 uppercase rounded-xl bg-gray-50 dark:bg-gray-700 dark:text-gray-400">
                     <tr>
                         <th scope="col" class="px-6 py-3">
@@ -85,7 +90,7 @@ const posts = await response.json();
                         </th>
                     </tr>
                 </thead>
-                <tbody>
+                <tbody class="w-[630px] sm:w-[660px] sm:mx-auto rounded-xl">
                     {
                         posts.map((post: { id: unknown; name: unknown; username: unknown; email: unknown}) => (
                     <tr class="bg-white border-b dark:bg-gray-800 dark:border-gray-700 hover:bg-gray-50 dark:hover:bg-gray-600">
