imagenes en la nube

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -3,8 +3,8 @@ import Gmail from "../icons/Gmail.astro"
 import Instagram from "../icons/Instagram.astro"
 ---
 
-<footer class=" rounded-lg m-4 pt-24">
-    <div class="w-full max-w-screen-xl mx-auto sm:p-2 md:py-2">
+<footer class="w-[610px] rounded-lg m-4 pt-24">
+    <div class="max-w-screen-xl sm:p-2 md:py-2">
         <div class="flex items-center justify-between py-2">
             
             <a href="#" class="flex items-center sm:mb-0 space-x-3 rtl:space-x-reverse">
